--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -43,7 +43,29 @@ jobs:
   serial_groups: [testflight]
   plan:
     - do:
-      - get: git
+      - aggregate:
+        - get: git
+        - get: ubuntu-xenial-stemcell-97
+          params: {tarball: false}
+      - task: upload-stemcell
+        config:
+          platform: linux
+          image_resource:
+            type: docker-image
+            source:
+              repository: (( grab meta.image.name ))
+              tag:        (( grab meta.image.tag ))
+          inputs:
+            - name: git
+            - name: ubuntu-xenial-stemcell-97
+              path: stemcell
+          run:
+            path: git/ci/scripts/upload-stemcell
+          params:
+            BOSH_ENVIRONMENT:   (( grab meta.bosh.target ))
+            BOSH_CA_CERT:       (( grab meta.bosh.cacert ))
+            BOSH_CLIENT:        (( grab meta.bosh.username ))
+            BOSH_CLIENT_SECRET: (( grab meta.bosh.password ))
       - name: bosh-deploy-testflight
         put: bosh-deploy-testflight
         params:
